[metadata]
name = stevensconnectclient
version = 0.1.1
description = Python client for Stevens Connect cloud data acquisition system API
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = stevensconnectclient
zip_safe = False
install_requires =
    requests
    pandas
    tqdm