[metadata]
name = stevensconnectclient
version = 0.2.1
description = Python client for Stevens Connect cloud data acquisition system API
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >= 3.10
packages = stevensconnectclient
zip_safe = False
install_requires =
    requests
    pandas>=2.1
    tqdm